<resources>
    <string name="app_name">Notes</string>

    <string name="my_tasks">My Tasks</string>
    <string name="create_list">Создать список</string>
    <string name="creating_list">Создание списка</string>
    <string name="done">Готово</string>
    <string name="input_list_name">Введите название списка</string>
    <string name="input_name">Введите название</string>
    <string name="save">Сохранить</string>
    <string name="task_marked_as_complete">Задачи отмечены как выполненные</string>
    <string name="cancel">Отменить</string>
</resources>
